--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -58,9 +58,9 @@ about.dialog_contributers_tab=team
 about.key=h
 about.name=Hilfe
 
-##aboutwebservice.description=Opens the Online Storage in default browser
-##aboutwebservice.key=A
-##aboutwebservice.name=About Online Storage
+aboutwebservice.description=\u00d6ffnet den Online Speicher im Webbrowser
+aboutwebservice.key=B
+aboutwebservice.name=\u00dcber Online Speicher
 
 addfriend.description=F\u00fcgt einen Nutzer zur Freundesliste hinzu
 addfriend.key=f
@@ -77,9 +77,9 @@ buypro.description=PowerFolder Pro jetzt kaufen
 buypro.key=K
 buypro.name=Pro kaufen
 
-##chat.notification.option1=Answer
-##chat.notification.option2=Close
-##chat.notification.subtitle=<html><center><b>PowerFolder</b></center>You received a new chat message</html>
+chat.notification.option1=Antworten
+chat.notification.option2=Schliessen
+chat.notification.subtitle=<html><center><b>PowerFolder</b></center>Sie haben eine neue Nachricht</html>
 
 chatpanel.cannot_deliver=Die Nachricht konnte nicht zugestellt werden, da '{0}' nicht verbunden ist\!
 chatpanel.chat_with=Chat mit
@@ -111,8 +111,8 @@ createshortcut.name=Desktop-Verkn\u00fcfpung erstellen
 delete_confimation.busy.description=L\u00f6sche Datei(en)
 delete_confimation.busy.title=L\u00f6sche Datei(en)
 delete_confimation.text=Sind Sie sicher die foldenden Dateien zu l\u00f6schen?\:\n (Hinweis\: Die Dateien werden nicht in den Papierkorb verschoben).
-##delete_confimation.text_delete=Are you sure you want to permanently delete the following file(s)?
-##delete_confimation.text_delete_directory=Are you sure you want to permanently delete the following file(s) and\nor directories (including subdirectories and the files)?
+delete_confimation.text_delete=M\u00f6chten Sie die folgenden Datein wirklich entg\u00fcltig l\u00f6schen?
+delete_confimation.text_delete_directory=M\u00f6chten Sie die folgenden Datein und Unterverzeichnisse wirklich entg\u00fcltig l\u00f6schen?
 delete_confimation.text_movetorecyclebin=M\u00f6chten Sie die folgenden Dateien wirklich in den PowerFolder Papierkorb schieben?
 delete_confimation.text_movetorecyclebin_DIR=<VERZ>
 delete_confimation.text_movetorecyclebin_directory=M\u00f6chten Sie die folgenden Dateien wirklich in den PowerFolder Papierkorb schieben?
@@ -127,7 +127,7 @@ dialog.addmembertofriendlist.button.no_neveraskagain=Nein (Nicht mehr nachfragen
 dialog.addmembertofriendlist.button.yes=Ja
 dialog.addmembertofriendlist.explain=Hinweis\: Freunde d\u00fcrfen die Inhalten der teilgenommenen Folder \u00e4ndern
 dialog.addmembertofriendlist.question={0} ist folgenden Foldern beigetreten\:\n\n{1}\nM\u00f6chten Sie {0} jetzt zur Freundeliste hinzuf\u00fcgen?
-##dialog.addmembertofriendlist.question2={0} has added you to his friendlist,\n\ndo you want to add him to your friendlist now?
+dialog.addmembertofriendlist.question2={0} hat Sie zu seiner Freundesliste hinzugef\u00fcgt,\n\nM\u00f6chten Sie den User jetzt zu Ihrer Freundesliste hinzuf\u00fcgen?
 dialog.addmembertofriendlist.title={0} zur Freundesliste
 dialog.alreadyrunning.exitbutton=Ende
 dialog.alreadyrunning.startbutton=Trotzdem starten
@@ -152,8 +152,8 @@ dialog.updatecheck.developmentversion.optionrestart=Neustart
 dialog.updatecheck.developmentversion.text=\nEine neue Entwicklungsversion wurde heruntergeladen\n\n - Buildzeiten -\nDiese version\: {0}\nNeue version\: {1}\n\nBitte starten Sie PowerFolder jetzt neu\n
 dialog.updatecheck.developmentversion.title=Neue Entwicklungsversion
 dialog.updatecheck.downloadAndUpdate=Jetzt herunterladen und aktualisieren
-##dialog.updatecheck.failed.text=Update failed. Please check your internet connection.\n \nPowerFolder Pro\: Please also check your Update-Service account under\nSettings/Pro Settings/PowerFolder Pro Loader.
-##dialog.updatecheck.failed.title=Update failed
+dialog.updatecheck.failed.text=Update fehlgeschlagen. Bitte \u00fcberpr\u00fcfen Sie Ihre Internetverbindung.\n \nPowerFolder Pro\: Bitte \u00fcberpr\u00fcfen Sie auch die Benutzerdaten Ihres Update-Service Accounts unter\nEinstellungen/Pro Einstellungen/PowerFolder Pro Loader.
+dialog.updatecheck.failed.title=Update fehlgeschlagen
 dialog.updatecheck.gotoHomepage=Zur PowerFolder Homepage
 dialog.updatecheck.noUpdateAvailable=Diese Version is aktuell
 dialog.updatecheck.nothingNeverAsk=Nicht mehr erinnern 
@@ -258,11 +258,11 @@ folder.members.synchronisation_panel.local_size=Lokal Gr\u00f6sse
 folder.members.synchronisation_panel.title=Mitglieds Sync Status
 
 foldercreate.description=Erstellt einen neuen Folder, mit Ihren Dateien
-##foldercreate.dialog.backupbyonlinestorage=Backup by Online Storage
-##foldercreate.dialog.backuperror.text=Unable to setup the Online Storage to backup the folder
-##foldercreate.dialog.backuperror.title=Unable to backup folder
+foldercreate.dialog.backupbyonlinestorage=Backup auf Online Speicher
+foldercreate.dialog.backuperror.text=Der Online Speicher konnte den Folder nicht sichern
+foldercreate.dialog.backuperror.title=Backup des Folders gescheitert
 foldercreate.dialog.saveinvitation=Einladung im Verzeichnis abspeichern
-##foldercreate.dialog.sendinvitation=Send invitations afterwards
+foldercreate.dialog.sendinvitation=Einladung versenden
 foldercreate.dialog.settings=Geben Sie nun die Einstellungen f\u00fcr den neuen Folder an
 foldercreate.dialog.title=Folder erstellen
 foldercreate.dirempty.text=Bitte w\u00e4hlen Sie den Speicherort f\u00fcr den Inhalt des Folders\!
@@ -304,8 +304,8 @@ folderleave.dialog.title=Folder {0} verlassen ?
 folderleave.key=V
 folderleave.name=Folder verlassen
 
-##foldermove.progress.text=Moving folder '{0}'
-##foldermove.progress.title=Folder Move
+foldermove.progress.text=Verschiebe Folder '{0}'
+foldermove.progress.title=Folder verschieben
 
 folderpanel.chattab.title=Chat
 folderpanel.filestab.dropfile_duplicate_dialog.skipall=Doppelte \u00fcberspringen
@@ -343,7 +343,7 @@ folderpanel.settingstab.removebutton.description=L\u00f6scht das Muster f\u00fcr
 folderpanel.settingstab.removebutton.key=E
 folderpanel.settingstab.removebutton.name=Entfernen
 folderpanel.settingstab.title=Einstellungen
-##folderpanel.settingstab.userecyclebin=Use recycle bin
+folderpanel.settingstab.userecyclebin=Papierkorb benutzen
 
 folderrepository.warnonclose.neveraskagain=Nicht mehr fragen 
 folderrepository.warnonclose.text=Diese Folder sind noch nicht vollst\u00e4ndig synchronisiert\:\n\n\n\n{0}\n\n\nTrozdem Beenden?
@@ -371,9 +371,9 @@ friendspanel.currently_online=Zurzeit online
 friendspanel.n_a=n/a
 friendspanel.search_for_user=Nach einem Benutzer suchen
 friendspanel.search_results=Suchergebnisse
-##friendspanel.unable_to_connect=Currently online (Unable to connect)
+friendspanel.unable_to_connect=Gerade online (Kann nicht verbinden)
 
-##general.apply=Apply
+general.apply=\u00dcbernehmen
 general.availability=Verf\u00fcgbarkeit
 general.cancel=Abbrechen
 general.cancel.key=A
@@ -420,7 +420,7 @@ general.today=Heute
 general.uploads=Uploads
 general.user=Benutzer
 general.visibility=Modus
-##general.webservice=Online Storage
+general.webservice=Online Speicher
 general.yesterday=Gestern
 
 hideoffline.description=Es werden nur Benutzer angezeigt, die gerade online sind 
@@ -478,9 +478,9 @@ member.non_mutual_friend=Keine gegenseitige Freundschaft
 member.onlan=Im Lan
 member.supernode=Supernode
 
-##mirrorfolder.description=Setup the Online Storage to backup a folder
-##mirrorfolder.key=B
-##mirrorfolder.name=Backup Folder
+mirrorfolder.description=Backup eines Folders auf den Online Speicher
+mirrorfolder.key=B
+mirrorfolder.name=Backup Folder
 
 mp3fileinfo.album=Album
 mp3fileinfo.artist=Interpret
@@ -498,7 +498,7 @@ myfolderstable.number_of_available_files=\# Verf\u00fcgbar
 myfolderstable.number_of_deleted_files=\# Gel\u00f6scht
 myfolderstable.number_of_local_files=\# Lokal
 myfolderstable.number_of_members={0} Teilnehmer
-##myfolderstable.sync=Sync
+myfolderstable.sync=Sync
 myfolderstable.sync_percetage=Sync%
 myfolderstable.syncprofile=Sync Profil
 myfolderstable.total_size=Totale Gr\u00f6sse
@@ -560,21 +560,21 @@ openfile.description=\u00d6ffnet die angew\u00e4hlte Datei
 openfile.key=\u00f6
 openfile.name=Datei \u00f6ffnen
 
-##openwebservice.description=Opens the Online Storage in the default browser
-##openwebservice.key=B
-##openwebservice.name=Open in Browser
+openwebservice.description=\u00d6ffnet den Online Speicher im Webbrowser
+openwebservice.key=B
+openwebservice.name=Browser \u00f6ffnen
 
-##plugin_disable.description=Disable (and stop) Plugin
-##plugin_disable.key=D
-##plugin_disable.name=Disable
+plugin_disable.description=Plugin ausschalten
+plugin_disable.key=A
+plugin_disable.name=Ausschalten
 
-##plugin_enable.description=Enable (and start) Plugin
-##plugin_enable.key=E
-##plugin_enable.name=Enable
+plugin_enable.description=Plugin einschalten
+plugin_enable.key=E
+plugin_enable.name=Einschalten
 
-##pluginsettings.description=Open the settings for this plugin
-##pluginsettings.key=S
-##pluginsettings.name=Settings
+pluginsettings.description=\u00d6ffnet die Einstellungen dieses Plugins
+pluginsettings.key=E
+pluginsettings.name=Einstellungen
 
 preferences.description=\u00d6ffnet die Einstellung
 preferences.dialog.advPort=Port
@@ -591,7 +591,7 @@ preferences.dialog.colortheme=PowerFolder Thema
 preferences.dialog.createdesktopshortcuts=Link auf dem Desktop anlegen
 ##preferences.dialog.debugReports=Enable debug reports
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Meldung wenn ein Benutzer einen Folder betritt, der nicht auf der Freundesliste steht. 
-##preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
+preferences.dialog.dialogs.check_for_program_updates=Nach PowerFolder Programmupdates suchen
 preferences.dialog.dialogs.title=Dialoge
 preferences.dialog.dialogs.warnoncloseifnotinsync=Beim Schliessen warnen, wenn die Synchronisation noch nicht abgeschlossen ist
 preferences.dialog.dialogs.warnonlimitedconnectivity=Warnung eingeschr\u00e4nkter Konnektivit\u00e4t 
@@ -630,14 +630,14 @@ preferences.dialog.networkmode.private=LAN und Internet
 ##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the internet.</BODY></HTML>
 preferences.dialog.nickname=Benutzername
 preferences.dialog.nonwindowsinfo=Hinweis\: Einige Einstellung sind nur Benutzern von Windows m\u00f6glich\!
-##preferences.dialog.openport=Automatically open Windows Firewall
-##preferences.dialog.openport.tooltip=Opens the PowerFolder port on the Windows Firewall
+preferences.dialog.openport=Automatisch die Windows Firewall \u00f6ffnen
+preferences.dialog.openport.tooltip=\u00d6ffnet den PowerFolder Port automatisch in der Windows Firewall
 ##preferences.dialog.plugin.classname=Java classname
 preferences.dialog.plugin.description=Beschreibung
 preferences.dialog.plugin.name=Name
-##preferences.dialog.plugin.status=Status
-##preferences.dialog.plugin.status_disabled=Disabled
-##preferences.dialog.plugin.status_enabled=Enabled
+preferences.dialog.plugin.status=Status
+preferences.dialog.plugin.status_disabled=Ausgeschaltet
+preferences.dialog.plugin.status_enabled=Aktiv
 preferences.dialog.plugin.title=Pro Einstellungen
 preferences.dialog.randomPort=Automatisch einen Port finden
 preferences.dialog.randomPort.tooltip=PowerFolder sucht nach einem freien Netzwerk Port. 
@@ -648,18 +648,18 @@ preferences.dialog.showpreviewpanel=Grafik Vorschau aktivieren
 ##preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My Folders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
 preferences.dialog.silentthrottle=Leitungsgeschwindigkeit im Ruhemodus
 preferences.dialog.silentthrottle.tooltip=Verringerung der Leitungsgeschwindingkeit im Ruhemodus
-##preferences.dialog.smalltoolbar=Use small toolbar icons
-##preferences.dialog.startwithwindows=Start PowerFolder with Windows
+preferences.dialog.smalltoolbar=Toolbar\: Kleine Symbole anzeigen
+preferences.dialog.startwithwindows=PowerFolder beim Windows Start ausf\u00fchren
 preferences.dialog.statusCantResolve=DynDns {0}\: nicht erreichbar\!
 preferences.dialog.statusDynDnsSuccess=DynDns {0} erfolgreich \u00fcberpr\u00fcft\!
 preferences.dialog.statusValidFailed=DynDns {0}\: \u00dcberpr\u00fcfung fehlgeschlagen\!
 preferences.dialog.statusWaitDynDns=Bitte warten Sie, w\u00e4hrend DynDns {0} \u00fcberpr\u00fcft wird\!
 preferences.dialog.title=Einstellungen
 preferences.dialog.titleProcessing=Arbeite...
-##preferences.dialog.userecyclebin=Use recycle bin (default)
+preferences.dialog.userecyclebin=Papierkorb verwenden (Standarteinstellung)
 preferences.dialog.useziponlan=ZIP Kompression im LAN verwenden 
 preferences.dialog.useziponlan.tooltip=Nutzen Sie die Einstellung, wenn die ZIP Kompression im bei LAN \u00dcbertragungen aktiviert werden soll.
-##preferences.dialog.verbose=Enable debug logging
+preferences.dialog.verbose=Debug logging aktivieren
 preferences.dialog.warnningMessage=Warnung
 preferences.dialog.xbehavior=Beim Schlie\u00dfen von PowerFolder
 preferences.dialog.xbehavior.exit=Programm beenden
@@ -839,12 +839,12 @@ status.upload=Up\: %.2f KB/s
 
 statusbar.synchronizing=Synchronisiere...
 
-##synchronisation.notice.title=Activated synchronisation profile {0}
-##synchronisation.warning.automatic_deletions=This mode will also synchronize file deletions\!\nContinue ?
-##synchronisation.warning.automatic_deletions_notice=This mode will also synchronize file deletions\!
+synchronisation.notice.title=Synchronisationsprofil {0} eingestellt
+synchronisation.warning.automatic_deletions=Dieses Profil synchronisiert auch Dateil\u00f6schungen\!\nForfahren?
+synchronisation.warning.automatic_deletions_notice=Dieses Profil synchronisiert auch Dateil\u00f6schungen\!
 ##synchronisation.warning.automatic_download=This mode will automatically download files\!\nContinue ?
-##synchronisation.warning.explanation=You have selected synchronisation profile '{0}' for folder {1}.
-##synchronisation.warning.title=Activate synchronisation profile {0} for {1}
+synchronisation.warning.explanation=Sie haben das Synchronisationsprofil '{0}' f\u00fcr Folder {1} eingestellt.
+synchronisation.warning.title=Synchronisationsprofil {0} f\u00fcr {1} eingestellt
 
 syncprofile.autodownload_all.name=Automatischer Download (Alles)
 syncprofile.autodownload_friends.name=Automatischer Download (von Freunden)
@@ -855,13 +855,13 @@ syncprofile.leecher.name=Torrent Downloader
 syncprofile.leechreleaser.name=Torrent Releaser
 syncprofile.manualdownload.name=Manueller Download
 syncprofile.projectwork.name=Projektarbeit
-##syncprofile.syncpcs.name=Mirror
+syncprofile.syncpcs.name=Spiegeln
 
-##systemservice.options.info1=Use these options install/uninstall
-##systemservice.options.info2=PowerFolder as system service.
-##systemservice.options.install=Install
-##systemservice.options.title=PowerFolder System Service
-##systemservice.options.uninstall=Uninstall
+systemservice.options.info1=Mit diese Option installieren/deinstallieren 
+systemservice.options.info2=Sie PowerFolder als Systemdienst.
+systemservice.options.install=Installieren
+systemservice.options.title=PowerFolder System Dienst
+systemservice.options.uninstall=Deinstallieren
 
 systray.exit=Beenden
 systray.hide=Verstecken
@@ -956,8 +956,8 @@ wizard.projectsync.setupsync=Ein neues Projekt synchronisieren
 wizard.projectsync.successjoin=Sie sind dem Projekt erfolgreich beigetreten\!
 wizard.projectsync.takepartsync=An einer Projektsynchronisation teilnehmen
 wizard.projectsync.title=Projekt Synchronisation
-##wizard.sendinvitations.additionaltext=Additional Information
-##wizard.sendinvitations.joinsync=Invitation files are required to join a mirror.
+wizard.sendinvitations.additionaltext=Zusatzinformation
+wizard.sendinvitations.joinsync=Eine Einladungsdatei wird ben\u00f6tigt um an einer Spiegelung teilzunehmen
 wizard.sendinvitations.neveruntrusted=<html>Geben Sie Einladungen nur an vertrauensw\u00fcrdige<br>Personen.</html>
 wizard.sendinvitations.offline=Nicht verbunden
 wizard.sendinvitations.overpf=\u00dcber PowerFolder versenden
@@ -973,22 +973,22 @@ wizard.setupdns.improvesread=<html>Eine (dynamische) Internetadresse (Dynamic DN
 wizard.setupdns.nodnssetup=<html>Sie haben bis jetzt noch keine (dynamische) Internetadresse<br>(Dynamic DNS) angegeben\!</html>
 wizard.setupdns.title=Dynamische Internetadresse einstellen
 wizard.setupsuccess=Setup erfolgreich
-##wizard.syncpcspanel.folderjoinsuccess=You successfully joined a folder mirror\!\n
-##wizard.syncpcspanel.foldersyncsuccess=You successfully set up a folder mirror\!\n
-wizard.syncpcspanel.pcsjoin=Ihre Daten werden nun mit den anderen PCs synchronisiert
-##wizard.syncpcspanel.select=Please select the directory which should be mirrored
+wizard.syncpcspanel.folderjoinsuccess=Computer Spiegelung wurde erfolgreich eingerichtet\!\n
+wizard.syncpcspanel.foldersyncsuccess=Computer Spiegelung wurde erfolgreich eingerichtet\!\n
+wizard.syncpcspanel.pcsjoin=Ihre Daten werden nun mit den anderen Computer(n) synchronisiert
+wizard.syncpcspanel.select=Bitte w\u00e4hlen Sie das Verzeichnis aus, welches gespiegelt werden soll
 wizard.syncpcspanel.selecttarget=Bitte w\u00e4hlen Sie nun das lokale Verzeichnis
-##wizard.syncpcspanel.setup=Setup a new mirror
-##wizard.syncpcspanel.takepart=Take part in a mirror
-##wizard.syncpcspanel.title=Mirror
-##wizard.webservice.enteraccount=Please enter your account data to login to the Online Storage
-##wizard.webservice.learnmore=What is the PowerFolder WebService?
-##wizard.webservice.login=Online Storage Login
-##wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder Online Storage
-##wizard.webservice.mirrorsetup=Backup Folder by Online Storage
-##wizard.webservice.password=Password
-##wizard.webservice.register=Register New Account
-##wizard.webservice.username=Email
+wizard.syncpcspanel.setup=Eine neue Computer Spiegelung aufsetzen 
+wizard.syncpcspanel.takepart=Einer Computer Spiegelung beitreten
+wizard.syncpcspanel.title=Spiegeln
+wizard.webservice.enteraccount=Bitte geben Sie Ihre Daten zum Login in den Online Speicher an
+wizard.webservice.learnmore=Was ist der PowerFolder Online Speicher?
+wizard.webservice.login=Online Speicher Login
+wizard.webservice.mirrorchoosefolder=Bitte w\u00e4hlen Sie den Folder aus der auf den Online Speicher gesichert werden soll
+wizard.webservice.mirrorsetup=Folder auf Online Speicher sichern
+wizard.webservice.password=Passwort
+wizard.webservice.register=Neu registrieren
+wizard.webservice.username=Email
 wizard.whattodo.bordertext=Bitte w\u00e4hlen Sie
 wizard.whattodo.filesharing=Filesharing
 wizard.whattodo.openonlinedocumentation=Online Dokumentation \u00f6ffnen
