#564 Correct spelling of cleardompleteddownloads --> clearcompleteddownloads. Remove ClearCompletedDownloadAction from TransferManagerModel. Remove downloadMenu from ControlQuarter. Change clearCompletedDownload in Transfermanager to take Download parameter. Add ClearCompletedAction to DownloadsPanel. Enable ClearCompletedAction if rows selected and trigger clearCompletedDownload for selected rows.

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -88,9 +88,9 @@ chatpanel.member_disconnected_at_time={0} getrennt um {1}
 chatpanel.member_joined_folder_at_time={0} ist dem Folder um {1} beigetreten
 chatpanel.member_left_folder_at_time={0} hat das Folder um {1} verlassen
 
-cleardompleteddownloads.description=Entfernt die heruntergeladenen und vollst\u00e4ndigen Dateien aus der Liste
-cleardompleteddownloads.key=c
-cleardompleteddownloads.name=Aufr\u00e4umen
+clearcompleteddownloads.description=Entfernt die heruntergeladenen und vollst\u00e4ndigen Dateien aus der Liste
+clearcompleteddownloads.key=c
+clearcompleteddownloads.name=Aufr\u00e4umen
 
 ##clearrecentdownloads.description=Clears the list of the recent problems
 ##clearrecentdownloads.key=c
