--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -88,9 +88,9 @@ chatpanel.member_disconnected_at_time={0} desconectado a las {1}
 chatpanel.member_joined_folder_at_time={0} se uni\u00f3 a la carpeta a las {1}
 chatpanel.member_left_folder_at_time={0} abandon\u00f3 la carpeta a las {1}
 
-cleardompleteddownloads.description=Limpia la lista de descargas completadas
-cleardompleteddownloads.key=c
-cleardompleteddownloads.name=Limpiar
+clearcompleteddownloads.description=Limpia la lista de descargas completadas
+clearcompleteddownloads.key=c
+clearcompleteddownloads.name=Limpiar
 
 ##clearrecentdownloads.description=Clears the list of the recent problems
 ##clearrecentdownloads.key=c
