--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -88,9 +88,9 @@ chatpanel.member_disconnected_at_time={0} d\u00e9connect\u00e9 \u00e0 {1}
 chatpanel.member_joined_folder_at_time={0} a rejoints le dossier \u00e0 {1}
 chatpanel.member_left_folder_at_time={0} a quitt\u00e9 le dossier \u00e0 {1}
 
-cleardompleteddownloads.description=Nettoyer la liste des fichiers compl\u00e8tement t\u00e9l\u00e9charg\u00e9s
-cleardompleteddownloads.key=N
-cleardompleteddownloads.name=Nettoyage
+clearcompleteddownloads.description=Nettoyer la liste des fichiers compl\u00e8tement t\u00e9l\u00e9charg\u00e9s
+clearcompleteddownloads.key=N
+clearcompleteddownloads.name=Nettoyage
 
 ##clearrecentdownloads.description=Clears the list of the recent problems
 ##clearrecentdownloads.key=c
