--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -88,9 +88,9 @@ chatpanel.member_disconnected_at_time={0} disconnesso da {1}
 chatpanel.member_joined_folder_at_time={0} entrato nella cartella a {1}
 chatpanel.member_left_folder_at_time={0} lasciato la cartella a {1}
 
-cleardompleteddownloads.description=Pulisci la lista dai download recenti completati
-cleardompleteddownloads.key=P
-cleardompleteddownloads.name=Pulisci
+clearcompleteddownloads.description=Pulisci la lista dai download recenti completati
+clearcompleteddownloads.key=P
+clearcompleteddownloads.name=Pulisci
 
 clearrecentdownloads.description=Cancella la lista dei problemi recenti
 clearrecentdownloads.key=c
