--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -88,9 +88,9 @@ chatpanel.member_disconnected_at_time={1} {0} \u5207\u65ad
 chatpanel.member_joined_folder_at_time={1} {0} \u304c\u30d5\u30a9\u30eb\u30c0\u306b\u53c2\u52a0
 chatpanel.member_left_folder_at_time={1} {0} \u304c\u30d5\u30a9\u30eb\u30c0\u3092\u9000\u907f
 
-cleardompleteddownloads.description=\u6700\u8fd1\u5b8c\u4e86\u3057\u305f\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3092\u30ea\u30b9\u30c8\u304b\u3089\u6d88\u53bb
-cleardompleteddownloads.key=C
-cleardompleteddownloads.name=\u5b8c\u4e86\u306e\u6d88\u53bb(C)
+clearcompleteddownloads.description=\u6700\u8fd1\u5b8c\u4e86\u3057\u305f\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3092\u30ea\u30b9\u30c8\u304b\u3089\u6d88\u53bb
+clearcompleteddownloads.key=C
+clearcompleteddownloads.name=\u5b8c\u4e86\u306e\u6d88\u53bb(C)
 
 ##clearrecentdownloads.description=Clears the list of the recent problems
 ##clearrecentdownloads.key=c
