--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -88,9 +88,9 @@ chatpanel.member_disconnected_at_time={0} verbrak de verbinding om {1}
 chatpanel.member_joined_folder_at_time={0} werd lid van de Folder om {1}
 chatpanel.member_left_folder_at_time={0} verliet de Folder om {1}
 
-cleardompleteddownloads.description=Verwijdert de downloads die klaar zijn uit de lijst
-cleardompleteddownloads.key=R
-cleardompleteddownloads.name=Ruim op
+clearcompleteddownloads.description=Verwijdert de downloads die klaar zijn uit de lijst
+clearcompleteddownloads.key=R
+clearcompleteddownloads.name=Ruim op
 
 ##clearrecentdownloads.description=Clears the list of the recent problems
 ##clearrecentdownloads.key=c
