--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -88,9 +88,9 @@ chatpanel.member_disconnected_at_time={0} \u0440\u0430\u0441\u0441\u043e\u0435\u
 chatpanel.member_joined_folder_at_time={0} \u043f\u0440\u0438\u0441\u043e\u0435\u0434\u0438\u043d\u0438\u043b\u0441\u044f \u043a \u041f\u0430\u043f\u043a\u0438 \u0432 {1}
 chatpanel.member_left_folder_at_time={0} \u043f\u043e\u043a\u0438\u043d\u0443\u043b \u041f\u0430\u043f\u043a\u0443 \u0432 {1}
 
-cleardompleteddownloads.description=\u0421\u0442\u0438\u0440\u0430\u0435\u0442 \u0441\u043a\u0430\u0447\u0438\u043d\u044b\u0435 \u0444\u0430\u0439\u043b\u044b \u0438\u0437 \u0441\u043f\u0438\u0441\u043a\u0430
-cleardompleteddownloads.key=c
-cleardompleteddownloads.name=\u0423\u0431\u0440\u0430\u0442\u044c\u0441\u044f
+clearcompleteddownloads.description=\u0421\u0442\u0438\u0440\u0430\u0435\u0442 \u0441\u043a\u0430\u0447\u0438\u043d\u044b\u0435 \u0444\u0430\u0439\u043b\u044b \u0438\u0437 \u0441\u043f\u0438\u0441\u043a\u0430
+clearcompleteddownloads.key=c
+clearcompleteddownloads.name=\u0423\u0431\u0440\u0430\u0442\u044c\u0441\u044f
 
 ##clearrecentdownloads.description=Clears the list of the recent problems
 ##clearrecentdownloads.key=c
