--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -88,9 +88,9 @@ chatpanel.member_disconnected_at_time={0} urkopplad kl {1}
 chatpanel.member_joined_folder_at_time={0} gick med i foldern kl {1}
 chatpanel.member_left_folder_at_time={0} gick ur foldern kl {1}
 
-cleardompleteddownloads.description=Rensar listan fr\u00e5n nyligen klara nedladdningar 
-cleardompleteddownloads.key=R
-cleardompleteddownloads.name=Rensa
+clearcompleteddownloads.description=Rensar listan fr\u00e5n nyligen klara nedladdningar 
+clearcompleteddownloads.key=R
+clearcompleteddownloads.name=Rensa
 
 ##clearrecentdownloads.description=Clears the list of the recent problems
 ##clearrecentdownloads.key=c
