--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -88,9 +88,9 @@ chatpanel.member_disconnected_at_time={0} \u4e8e {1} \u65ad\u5f00\u8fde\u63a5
 chatpanel.member_joined_folder_at_time={0} \u4e8e {1} \u52a0\u5165\u6587\u4ef6\u5939
 chatpanel.member_left_folder_at_time={0} \u4e8e {1} \u79bb\u5f00\u6587\u4ef6\u5939
 
-cleardompleteddownloads.description=\u4ece\u5217\u8868\u4e2d\u6e05\u9664\u6700\u8fd1\u5b8c\u6210\u7684\u4e0b\u8f7d
-cleardompleteddownloads.key=c
-cleardompleteddownloads.name=\u6d88\u9664
+clearcompleteddownloads.description=\u4ece\u5217\u8868\u4e2d\u6e05\u9664\u6700\u8fd1\u5b8c\u6210\u7684\u4e0b\u8f7d
+clearcompleteddownloads.key=c
+clearcompleteddownloads.name=\u6d88\u9664
 
 ##clearrecentdownloads.description=Clears the list of the recent problems
 ##clearrecentdownloads.key=c
