--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -79,7 +79,7 @@ buypro.name=\u8d2d\u4e70\u4e13\u4e1a\u7248
 
 chat.notification.option1=\u56de\u7b54
 chat.notification.option2=\u5173\u95ed
-##chat.notification.subtitle=<html><center><b>PowerFolder</b></center>You received a new chat message</html>
+chat.notification.subtitle=<html><center><b>PowerFolder</b></center>\u4f60\u6536\u5230\u4e00\u6761\u65b0\u7684\u804a\u5929\u4fe1\u606f</html>
 
 chatpanel.cannot_deliver=\u56e0\u4e3a\u4e0d\u80fd\u8fde\u63a5'{0}'\uff0c\u6d88\u606f\u4e0d\u80fd\u4f20\u9012
 chatpanel.chat_with=\u804a\u5929
@@ -88,13 +88,13 @@ chatpanel.member_disconnected_at_time={0} \u4e8e {1} \u65ad\u5f00\u8fde\u63a5
 chatpanel.member_joined_folder_at_time={0} \u4e8e {1} \u52a0\u5165\u6587\u4ef6\u5939
 chatpanel.member_left_folder_at_time={0} \u4e8e {1} \u79bb\u5f00\u6587\u4ef6\u5939
 
-clearcompleteddownloads.description=\u4ece\u5217\u8868\u4e2d\u6e05\u9664\u6700\u8fd1\u5b8c\u6210\u7684\u4e0b\u8f7d
-clearcompleteddownloads.key=c
-clearcompleteddownloads.name=\u6d88\u9664
+cleardompleteddownloads.description=\u4ece\u5217\u8868\u4e2d\u6e05\u9664\u6700\u8fd1\u5b8c\u6210\u7684\u4e0b\u8f7d
+cleardompleteddownloads.key=c
+cleardompleteddownloads.name=\u6d88\u9664
 
-##clearrecentdownloads.description=Clears the list of the recent problems
-##clearrecentdownloads.key=c
-##clearrecentdownloads.name=Cleanup
+clearrecentdownloads.description=\u6e05\u9664\u6700\u8fd1\u7684\u95ee\u9898\u5217\u8868
+clearrecentdownloads.key=c
+clearrecentdownloads.name=\u6e05\u9664
 
 connect.description=\u624b\u52a8\u8fde\u63a5\u5230 Powerfolder \u7528\u6237
 connect.dialog.text=\u8bf7\u8f93\u5165\u4f60\u60f3\u8fde\u63a5\u7684\u4e3b\u673a\u540d\u6216IP\n\nPowerFolder\u5c06\u5728\u7a0d\u540e\u81ea\u52a8\u8fde\u63a5\uff0c\n\u5982\u679c\u4f60\u60f3\u624b\u52a8\u8fde\u63a5\u8bf7\u4f7f\u7528\u8be5\u9009\u9879\u3002\n 
@@ -415,8 +415,8 @@ general.synchonisation=\u540c\u6b65
 general.syncprofile=\u540c\u6b65\u9009\u9879
 general.time=%02d\:%02d\:%02d
 general.today=\u4eca\u5929
-##general.transfer.problem=Transfer Problem
-##general.transfer.problems=Transfer Problems
+general.transfer.problem=\u4f20\u8f93\u95ee\u9898
+general.transfer.problems=\u4f20\u8f93\u95ee\u9898
 general.uploads=\u4e0a\u4f20
 general.user=\u7528\u6237
 general.visibility=\u516c\u5f00\u7a0b\u5ea6
@@ -671,14 +671,14 @@ previewfiles.description=\u5728\u6587\u4ef6\u5939\u4e2d\u9884\u89c8\u6587\u4ef6
 previewfiles.key=P
 previewfiles.name=\u9884\u89c8
 
-##pro.http.options.directconnect=Direct connection to the internet
-##pro.http.options.host=Hostname
-##pro.http.options.httpproxy=HTTP-Proxy
-##pro.http.options.password=Password
-##pro.http.options.port=Port
-##pro.http.options.title=HTTP Connection settings
-##pro.http.options.username=Username
-##pro.http.options.withauth=With authorization
+pro.http.options.directconnect=\u76f4\u63a5\u8fde\u63a5\u5230\u4e92\u8054\u7f51
+pro.http.options.host=\u4e3b\u673a\u540d
+pro.http.options.httpproxy=HTTP-\u4ee3\u7406
+pro.http.options.password=\u5bc6\u7801
+pro.http.options.port=\u7aef\u53e3
+pro.http.options.title=HTTP\u8fde\u63a5\u8bbe\u7f6e
+pro.http.options.username=\u7528\u6237\u540d
+pro.http.options.withauth=\u9700\u8981\u9a8c\u8bc1
 pro.security.autoacceptfriendkeys=\u81ea\u52a8\u63a5\u53d7\u9996\u4e2a\u6765\u81ea\u597d\u53cb\u7684\u516c\u94a5
 pro.security.high=\u9ad8
 pro.security.high_info=\u9ad8\u5b89\u5168\u7ea7(\u9ed8\u8ba4)\:
@@ -707,7 +707,7 @@ publicfolders.size=\u5927\u5c0f
 quickinfo.download.active={0} \u4e2a\u6d3b\u8dc3\u4e0b\u8f7d
 quickinfo.download.completed=\u6700\u8fd1\u5b8c\u6210 {0} \u4e2a\u4e0b\u8f7d
 quickinfo.download.title=\u4e0b\u8f7d\u72b6\u6001
-##quickinfo.folder.downloads_recently_completed=, {0} Downloads recently completed
+quickinfo.folder.downloads_recently_completed=, \u6700\u8fd1\u5b8c\u6210\u4e86{0} \u4e2a\u4e0b\u8f7d\u4efb\u52a1
 quickinfo.folder.is_in_sync=\u6587\u4ef6\u5939\u6b63\u5728\u540c\u6b65
 quickinfo.folder.is_synchronizing=\u6b63\u5728\u540c\u6b65\u6587\u4ef6\u5939\u2026\u2026
 quickinfo.folder.number_of_files_and_size={0} \u6587\u4ef6\uff0c {1}
@@ -727,8 +727,8 @@ quickinfo.root.insync=\u5df2\u540c\u6b65\u6240\u6709\u6587\u4ef6\u5939
 quickinfo.root.offline=\u79bb\u7ebf
 quickinfo.root.syncing=\u6b63\u5728\u540c\u6b65\u2026\u2026
 quickinfo.root.title=\u6b22\u8fce\u4f7f\u7528PowerFolder\uff01
-##quickinfo.transfer.problems.detected={0} problem(s) recently detected
-##quickinfo.transfer.problems.title=Transfer Problems Status
+quickinfo.transfer.problems.detected=\u6700\u8fd1\u68c0\u6d4b\u5230{0} \u4e2a\u95ee\u9898
+quickinfo.transfer.problems.title=\u4f20\u8f93\u95ee\u9898\u72b6\u6001
 quickinfo.upload.active={0} \u4e2a\u6d3b\u8dc3\u4e0a\u4f20
 quickinfo.upload.title=\u4e0a\u4f20\u72b6\u6001
 quickinfo.user.isconnectedinet=\u4e92\u8054\u7f51
@@ -857,11 +857,11 @@ syncprofile.manualdownload.name=\u624b\u52a8\u4e0b\u8f7d
 syncprofile.projectwork.name=\u540c\u6b65\u9879\u76ee
 syncprofile.syncpcs.name=\u955c\u50cf
 
-##systemservice.options.info1=Use these options install/uninstall
-##systemservice.options.info2=PowerFolder as system service.
-##systemservice.options.install=Install
-##systemservice.options.title=PowerFolder System Service
-##systemservice.options.uninstall=Uninstall
+systemservice.options.info1=\u4f7f\u7528\u8fd9\u4e9b\u9009\u9879\u5b89\u88c5/\u5378\u8f7d
+systemservice.options.info2=PowerFolder \u4f5c\u4e3a\u7cfb\u7edf\u670d\u52a1\u3002
+systemservice.options.install=\u5b89\u88c5
+systemservice.options.title=PowerFolder\u7cfb\u7edf\u670d\u52a1
+systemservice.options.uninstall=\u5378\u8f7d
 
 systray.exit=\u9000\u51fa
 systray.hide=\u9690\u85cf
@@ -882,20 +882,20 @@ title.public.folder=\u516c\u5171\u6587\u4ef6\u5939
 title.public.folders=\u516c\u5171\u6587\u4ef6\u5939
 title.search.users=\u67e5\u627e\u7528\u6237
 
-##transfer.problem.broken.download=The transfer download was broken for {0}
-##transfer.problem.broken.upload=\=The transfer upload was broken for {0}
-##transfer.problem.file.not.found.exception=There was a FileNotFoundException for {0}\: {1}
-##transfer.problem.general.exception=There was an Exception for {0}\: {1}
-##transfer.problem.illegal.chunk=Received illegal chunk for {0}\: {1}
-##transfer.problem.invalid.part=Received invalid part request {0}
-##transfer.problem.io.exception=Unable to read/write {0}\: {1}
-##transfer.problem.md5.error=There was an MD5-Hash error for {0}
-##transfer.problem.old.upload=Already received download request for {0} from {1}
-##transfer.problem.temp.file.delete=Unable to removed broken tempfile for {0} {1}
-##transfer.problem.temp.file.open=Unable to create/open tempfile for {0} {1}
-##transfer.problem.temp.file.write=Unable to write to tempfile for {0} {1}
-##transfer.problem.title=File Transfer Problem
-##transfer.problem.transfer.exception=There was a TransferException for {0}\: {1}
+transfer.problem.broken.download=\u4e0b\u8f7d\u4efb\u52a1 {0} \u5df2\u7ecf\u635f\u574f
+transfer.problem.broken.upload=\=\u4e0a\u4f20\u4efb\u52a1 {0} \u5df2\u7ecf\u635f\u574f
+transfer.problem.file.not.found.exception=\u51fa\u73b0\u6587\u4ef6\u65e0\u6cd5\u627e\u5230\u5f02\u5e38\uff08FileNotFoundException\uff09 {0}\: {1}
+transfer.problem.general.exception=\u51fa\u73b0\u4e00\u4e2a\u5f02\u5e38 {0}\: {1}
+transfer.problem.illegal.chunk=\u63a5\u6536\u5230\u975e\u6cd5\u6587\u4ef6\u5757 {0}\: {1}
+transfer.problem.invalid.part=\u63a5\u6536\u5230\u975e\u6cd5\u90e8\u5206\u8bf7\u6c42 {0}
+transfer.problem.io.exception=\u4e0d\u80fd\u8bfb/\u5199 {0}\: {1}
+transfer.problem.md5.error=\u6709\u4e00\u4e2a MD5-Hash \u6821\u9a8c\u9519\u8bef {0}
+transfer.problem.old.upload=\u603b\u662f\u63a5\u53d7\u6765\u81ea {1} \u7684\u4e0b\u8f7d\u8bf7\u6c42 {0}
+transfer.problem.temp.file.delete=\u65e0\u6cd5\u5220\u9664\u635f\u574f {0} {1} \u7684\u4e34\u65f6\u6587\u4ef6
+transfer.problem.temp.file.open=\u65e0\u6cd5\u5220\u9664\u521b\u5efa/\u6253\u5f00 {0} {1} \u7684\u4e34\u65f6\u6587\u4ef6
+transfer.problem.temp.file.write=\u65e0\u6cd5\u5220\u9664\u5199\u5165 {0} {1} \u7684\u4e34\u65f6\u6587\u4ef6
+transfer.problem.title=\u6587\u4ef6\u4f20\u8f93\u51fa\u9519
+transfer.problem.transfer.exception= {0}\: {1}\u5b58\u5728\u4e00\u4e2a\u4f20\u8f93\u5f02\u5e38\uff08TransferException\uff09
 
 transfers.completed=\u5b8c\u6210
 transfers.eta=ETA
